syntax = "proto3";
package com.huobi.cy.protobuf;
option java_outer_classname = "UserInfo";

message User {
    string account = 1;
    string password = 2;
}

message ListOfUsers {
    repeated User users = 1;
}